@@ -1,3 +1,14 @@
+2005-06-28 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* device/lib/_gptrget.c: also push/pop _PSBANK, added # to 0x03
+	* device/lib/_itoa.c,
+	* device/lib/_ltoa.c: optimized codesize
+	* src/SDCCsymt.c (checkSClass): added sanity check for sfr at addresses,
+	  but don't know how to suppress the double warning.
+	* src/mcs51/gen.c (genPlusIncr): fixed bug when incrementing volatile int's
+	* support/Util/SDCCerr.c,
+	* support/Util/SDCCerr.h: added warning W_SFR_ABSRANGE for sanity check
+
 2005-06-27 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* as/mcs51/asexpr.c (expr): disabled warning "not in .flat24 mode",
